# DB

./: .gitignore  Cargo.toml  README.md  storage_config.json
.cargo/: config.toml
.github/workflows/: rust.yml
benches/: 10K_hash_match.rs  10K_iteration.rs  10K_iteration_deserialized.rs  10K_iteration_random.rs  10K_iteration_series.rs  10K_nested_loop.rs  1M_iteration.rs  1M_iteration_deserialized.rs  big_collection_iteration.rs  collection_iteration.rs  utils.rs
src/: lib.rs  objects.rs  storage.rs  utils.rs
src/collection/: collection_config.rs  collection_iterator.rs  collection_statistics.rs  mod.rs  native_collection_iterator.rs
src/collection/indexes/: bitmap.rs  hash.rs  reverse.rs  sorted.rs
src/errors/: client_side_error.rs  compaction_error.rs  mod.rs  query_error.rs  storage_error.rs
src/objects/: mod.rs  object_deserializer.rs  object_field.rs  object_state.rs
src/operators/: deserializing.rs  mod.rs
src/operators/joining/: hash_match.rs  mod.rs  nested_loop.rs
src/operators/linear/: filter.rs  mod.rs  select.rs  skip.rs  take.rs
src/operators/sorting/: in_memory_sort.rs  mod.rs
src/operators/sourcing/: mod.rs  table_scan.rs
src/query/: binary_expression.rs  condition.rs  mod.rs  unary_expression.rs
src/storage/: collection.rs  log_file.rs  mod.rs  query.rs  storage_config.rs
src/storage/collection/: collection_config.rs  collection_iterator.rs  collection_statistics.rs  indexes.rs  native_collection_iterator.rs
src/storage/collection/indexes/: bitmap.rs  hash.rs  reverse.rs  sorted.rs
src/storage/log_file/: entry_fields.rs  log_compaction.rs  log_entry.rs  log_position.rs
src/storage/query/: condition.rs
src/utils/: mod.rs  set_macro.rs  split_by_length_encoding.rs  yokeable.rs
