[package]
name = "db"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
serde = { version = "1.0.188", features = ["derive", "rc"] }
serde_json = "1.0.107"
thiserror = "2.0.16"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
schnellru = "0.2.1"
itertools = "0.14.0"
serde-aux = { version = "4.2.0", default-features = false }
smallvec = { version = "1.11.1", features = ["union", "const_generics"] }
vint64 = { version = "1.0.1", features = ["std"] }
chrono = "0.4.42"
yoke = { version = "0.8.0", features = ["alloc", "zerofrom", "derive"] }

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }
rand = "0.9.2"
serial_test = { version = "3.2.0", default-features = false }

[[bench]]
name = "collection_iteration"
harness = false

[[bench]]
name = "big_collection_iteration"
harness = false
