[package]
name = "db"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib"]

[profile.release]
opt-level = 3
lto = true

[profile.bench]
inherits = "release"
debug = true
strip = false

[dependencies]
serde = { version = "1.0.188", features = ["derive", "rc"] }
serde_json = "1.0.107"
thiserror = "2.0.16"
uuid = { version = "1.4.1", features = ["v4", "v7", "serde"] }
schnellru = "0.2.1"
itertools = "0.14.0"
serde-aux = { version = "4.2.0", default-features = false }
smallvec = { version = "1.11.1", features = ["union", "const_generics"] }
vint64 = { version = "1.0.1", features = ["std"] }
chrono = "0.4.42"
yoke = { version = "0.8.0", features = ["alloc", "zerofrom", "derive"] }
bytesize = "2.0.1"
gxhash = "3.5.0"

[dev-dependencies]
criterion = { version = "0.7.0" }
rand = "0.9.2"
serial_test = { version = "3.2.0", default-features = false }

[[bench]]
name = "1M_iteration_deserialized"
harness = false

[[bench]]
name = "1M_iteration"
harness = false

[[bench]]
name = "10K_iteration_deserialized"
harness = false

[[bench]]
name = "10K_iteration"
harness = false
